--- a/form-authentication/pom.xml
+++ b/form-authentication/pom.xml
@@ -2,17 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.enlightendev</groupId>
-    <artifactId>basic-authentication</artifactId>
+    <artifactId>form-authentication</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>basic authentication</name>
-    <description>using basic authentication to allow access to protected resources</description>
-
+    <name>form security</name>
+    <description>using custom form based authentication to allow access to protected resources</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
