--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>basic-authentication</module>
         <module>form-authentication</module>
+        <module>oauth2-rest-service</module>
     </modules>
 
     <developers>
