--- a/angular-split/resource/pom.xml
+++ b/angular-split/resource/pom.xml
@@ -13,10 +13,10 @@
     <description>...</description>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.1.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <groupId>com.enlightendev</groupId>
+        <artifactId>spring-security</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <dependencies>
