--- a/form-authentication/pom.xml
+++ b/form-authentication/pom.xml
@@ -13,10 +13,9 @@
     <description>using custom form based authentication to allow access to protected resources</description>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.1.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <groupId>com.enlightendev</groupId>
+        <artifactId>spring-security</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
