--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.2.1.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>com.enlightendev</groupId>
     <artifactId>spring-security</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -25,7 +32,7 @@
         <developer>
             <id>jlamadrid</id>
             <name>Juan Lamadrid</name>
-            <email>juan.lamadrid@gmail.com</email>
+            <email>enlightendevio@gmail.com</email>
             <url>http://www.enlightendev.io</url>
         </developer>
     </developers>
