--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.1.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <version>1.2.2.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.enlightendev</groupId>
@@ -22,6 +22,7 @@
 
     <modules>
         <module>basic-authentication</module>
+        <module>authserver</module>
         <module>form-authentication</module>
         <module>oauth2-rest-service</module>
         <module>angular-split/resource</module>
