--- a/springboot-oauth2jwt-extjs/build.gradle
+++ b/springboot-oauth2jwt-extjs/build.gradle
@@ -35,8 +35,8 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-web")
 
-//    compile("org.springframework.boot:spring-boot-starter-security")
-//    compile("org.springframework.security.oauth:spring-security-oauth2:${oauthVersion}")
+    compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.security.oauth:spring-security-oauth2:${oauthVersion}")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
