added pom for now so we can use maven in each project

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>oauth2-rest-service</module>
         <module>angular-split/resource</module>
         <module>angular-split/ui</module>
+        <module>springboot-oauth2jwt-extjs</module>
     </modules>
 
     <developers>
