--- a/OAuthAuthorizationServer/build.gradle
+++ b/OAuthAuthorizationServer/build.gradle
@@ -38,8 +38,9 @@ dependencies {
     //
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
-
-    runtime('org.hsqldb:hsqldb:2.0.0')
+    
+    compile('mysql:mysql-connector-java')
+    //runtime('org.hsqldb:hsqldb:2.0.0')
 
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.security.oauth:spring-security-oauth2:2.0.8.RELEASE')
