--- a/OAuthAuthorizationServer/src/main/resources/application.yml
+++ b/OAuthAuthorizationServer/src/main/resources/application.yml
@@ -1,1 +1,8 @@
 server.port: 9900
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/authdb
+    username: authdb-user
+    password: authdb-user
